# William-E-Devitt

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20260701213546_init.sql
src/: commands.rs  db.rs  main.rs  models.rs  utils.rs
src/commands/: common.rs  history.rs  mod.rs  photo.rs  stats.rs
