[package]
name = "William"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
