[package]
name = "William"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
    "macros",
    "migrate",
] }
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
